
add_executable(baseline
    params.hxx
    utils.cxx
    baseline.cxx
    baseline-main.cxx
)

add_executable(using-reserve
    params.hxx
    utils.cxx
    using-reserve.cxx
    using-reserve-main.cxx
)

add_executable(char-fn
    params.hxx
    utils.cxx
    char-fn.cxx
    char-fn-main.cxx
)

add_executable(mem-map-file
    params.hxx
    utils.cxx
    mem-map-file.cxx
    mem-map-file-main.cxx
)

